Bug 1720694 - Set mGtkWindowRoleName so WM_WINDOW_ROLE can be set properly. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D120000